--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <script>
     window.$docsify = {
       auto2top: true,
-      name: '聚表文档',
+      name: '聚表学习笔记',
       repo: 'esap/Juable-doc',
 	  loadSidebar: true,
-	  subMaxLevel: 3,
+	  subMaxLevel: 2,
 	  search: {
         noData: {
           '/': '没有结果!',
